# textanalysis

./: .dockerignore  .gitignore  CEDA-run.bat  CEDA-run.sh  LICENSE  README.md  ReadMe.md  hello.py  pyproject.toml  topic_modeling_app.py
.devcontainer/: Dockerfile  devcontainer.json
.streamlit/: config.toml
Answer generator/Data/: opleidingen_feedback.xlsx
TM to Python/: TM Bert.ipynb
archive/: USAGE.md  sentiment_analysis.py  topic-modeling-script.py
archive/TM to Python/: TM Bert.ipynb
src/: CEDA_HOME.py  TODO  main.py  sandbox.py  styles.css
src/backend/: Random answer generator.py  Word_Cloud.py  anonymizer.py  file_handler.py  remove_stopwords.py  word_cloud.py
src/config/: config.yaml  file_handler.py  screen_scanner.py
src/frontend/Files/: Anonymize.py  Remove_Stopwords.py  Upload_File.py
src/frontend/Modules/: 1_Word_Cloud.py  2_Sentiment_Analysis.py  3_Topic_Modeling.py  4_Anonymize.py
src/frontend/Overview/: Home.py
src/logic/: Word_Cloud.py  anonymizer.py  dataframe_manager.py  file_handler.py  remove_stop_words.py  sentiment_analysis.py  topic_modeling.py
src/modules/: Home.py
src/pages/: Sentiment_Analysis.py  Topic_Modeling.py  Word_Cloud.py
src/screens/: 1_Word_Cloud.py  4_Demo.py  Home.py
src/screens/Files/: Upload_Files.py
src/screens/Home/: Home.py
src/screens/Modules/: 1_Word_Cloud.py  2_Sentiment_Analysis.py  3_Topic_Modeling.py  4_Anonymize.py
