[project]
name = "textanalysis-cedanl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bertopic>=0.16.4",
    "fastexcel>=0.12.1",
    "langdetect>=1.0.9",
    "nltk>=3.9.1",
    "numpy==1.26",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "polars>=1.20.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.0",
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "vadersentiment>=3.3.2",
    "wordcloud>=1.9.4",
]
